...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_statistics_months"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margins_sides"
                android:layout_marginTop="@dimen/margins_elements_small"
                android:text="@string/btn_months"
                android:textSize="@dimen/font_buttons"
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.055"
                    app:srcCompat="@drawable/icon_statistics_dollarsign" />

                <TextView
                    android:id="@+id/txt_statistics_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_h2"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_statistics_dollarsign"
                    app:layout_constraintStart_toEndOf="@+id/icon_statistics_dollarsign"
                    app:layout_constraintTop_toBottomOf="@+id/txt_statistics_budget" />

                <TextView
                    android:id="@+id/txt_statistics_expenses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eurosign"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_h1"
                    android:textStyle="bold"
...
                    android:textColor="@color/turquoise_secondary"
                    android:textSize="@dimen/font_small"
                    app:layout_constraintStart_toStartOf="@+id/txt_statistics_h_balance"
                    app:layout_constraintTop_toTopOf="@+id/box_statistics_darkblue" />

                <TextView
                    android:id="@+id/txt_statistics_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/white_primary"
                    android:textSize="@dimen/font_h1"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/box_statistics_darkblue"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/txt_statistics_h_balance"
                    app:layout_constraintTop_toBottomOf="@+id/txt_statistics_h_balance" />

                <TextView
                    android:id="@+id/txt_statistics_h_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text=""
                    android:textColor="@color/turquoise_secondary"
                    android:textSize="@dimen/font_normalText"
...
                    app:layout_constraintHorizontal_bias="0.49"
                    app:layout_constraintStart_toEndOf="@+id/txt_statistics_h_incomeyear"
                    app:layout_constraintTop_toTopOf="@+id/txt_statistics_h_incomeyear"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/txt_statistics_incomeyear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/white_primary"
                    android:textSize="@dimen/font_normalText"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/txt_statistics_h_expensesyear"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/txt_statistics_h_incomeyear"
                    app:layout_constraintTop_toBottomOf="@+id/txt_statistics_h_incomeyear" />

                <TextView
                    android:id="@+id/txt_statistics_expensesyear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/white_primary"
                    android:textSize="@dimen/font_normalText"
                    android:textStyle="bold"
...
