<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstrainedLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_farbverlauf"
    tools:context="com.example.earny.MainActivity">

    <ImageView
        android:id="@+id/img_register_earny_logo"
        android:layout_width="300dp"
        android:layout_height="210dp"
        android:layout_marginStart="@dimen/margins_sides"
        android:layout_marginEnd="@dimen/margins_sides"
        android:contentDescription="@string/img_earnyLogo"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_earny_bunt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_register_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins_sides"
        android:layout_marginEnd="@dimen/margins_sides"
        android:layout_marginBottom="@dimen/margins_elements_small"
        android:text="@string/h_register"
        android:textColor="@color/white"
        android:textSize="@dimen/font_h1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_register_earny_logo" />

    <EditText
        android:id="@+id/txt_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins_sides"
        android:layout_marginTop="@dimen/margins_elements_small"
        android:layout_marginEnd="@dimen/margins_sides"
        android:autofillHints="username"
        android:background="@color/white_transparent_background"
        android:drawableStart="@drawable/icon_person_white"
        android:drawablePadding="@dimen/padding_icons"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:padding="@dimen/padding_text_inputs"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/font_hints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_register_register" />

    <EditText
        android:id="@+id/txt_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins_sides"
        android:layout_marginTop="@dimen/margins_elements_small"
        android:layout_marginEnd="@dimen/margins_sides"
        android:autofillHints="password"
        android:background="@color/white_transparent_background"
        android:drawableStart="@drawable/icon_password_lock_white"
        android:drawablePadding="@dimen/padding_icons"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="@dimen/padding_text_inputs"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/font_hints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_register_username" />

    <EditText
        android:id="@+id/txt_register_password_rep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins_sides"
        android:layout_marginTop="@dimen/margins_elements_small"
        android:layout_marginEnd="@dimen/margins_sides"
        android:autofillHints="password"
        android:background="@color/white_transparent_background"
        android:drawableStart="@drawable/icon_password_lock_white"
        android:drawablePadding="@dimen/padding_icons"
        android:hint="@string/hint_password_rep"
        android:inputType="textPassword"
        android:padding="@dimen/padding_text_inputs"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_register_password" />

    <EditText
        android:id="@+id/txt_register_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_register_password_rep"
        android:layout_marginStart="@dimen/margins_sides"
        android:layout_marginTop="@dimen/margins_elements_small"
        android:layout_marginEnd="@dimen/margins_sides"
        android:background="@color/white_transparent_background"
        android:drawableStart="@drawable/icon_register_euro_white"
        android:drawablePadding="@dimen/padding_icons"
        android:ems="10"
        android:hint="@string/h_account"
        android:inputType="numberDecimal"
        android:padding="@dimen/padding_text_inputs"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_register_password_rep"
        tools:ignore="Autofill" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margins_elements_small"
        android:backgroundTint="@color/dark_blue_buttons"
        android:text="@string/btn_register"
        android:textSize="@dimen/font_buttons"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_register_balance" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margins_elements_small"
        android:backgroundTint="@color/dark_blue_buttons"
        android:text="@string/btn_login_nav"
        android:textSize="@dimen/font_buttons"
        app:layout_constraintEnd_toEndOf="@+id/btn_register_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register_register"
        app:layout_constraintTop_toBottomOf="@id/btn_register_register" />

</androidx.constraintlayout.widget.ConstraintLayout>